tests/snapshots/blank_lines/def_then_assignment.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/blank_lines/def_then_assignment.input.py
---
"""
A module-level def followed by an annotated assignment normalizes to 2
blank lines between them, regardless of the source's actual count.
"""


def configure():
    return None


TIMEOUT: float = 30.0
