tests/snapshots/blank_lines/diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
---
blank-lines@238..239
blank-lines@393..394
