tests/snapshots/blank_lines/extra_blanks_collapse.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/extra_blanks_collapse.input.py
---
blank-lines@167..172
