tests/snapshots/blank_lines/extra_blanks_collapse.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/blank_lines/extra_blanks_collapse.input.py
---
"""
Four blank lines before a module-level def collapse to the canonical
2. The rule replaces the whole inter-statement whitespace run.
"""


def first():
    return 1


def second():
    return 2
