tests/snapshots/blank_lines/field_then_method.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/field_then_method.input.py
---
blank-lines@219..220
blank-lines@258..262
blank-lines@296..300
