tests/snapshots/blank_lines/from_then_bare_collapse.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/from_then_bare_collapse.input.py
---
blank-lines@120..123
