tests/snapshots/blank_lines/from_then_bare_collapse.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/blank_lines/from_then_bare_collapse.input.py
---
"""
A `from` import followed by a bare `import` separated by two blank
lines collapses to one.
"""

from sys import argv

import os
