tests/snapshots/blank_lines/from_then_bare_idempotent.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/from_then_bare_idempotent.input.py
---

