tests/snapshots/blank_lines/from_then_bare_idempotent.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/blank_lines/from_then_bare_idempotent.input.py
---
"""
A `from` import followed by a bare `import` already separated by one
blank line stays at one.
"""

from sys import argv

import os
