tests/snapshots/blank_lines/from_then_bare_insert.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/from_then_bare_insert.input.py
---
blank-lines@161..162
